# spill

./: .gitignore  README.md  journal.md
spill/: Cargo.toml
spill/src/: error.rs  lib.rs  main.rs
spill/src/channel/: finalize.rs  mod.rs  payment.rs  psbt.rs  verify.rs
spill/src/channel/backend/: mod.rs  segwit.rs
spill/tests/: segwit_tests.rs
spill/tests/common/: conversion_utils.rs  mod.rs
spill/tests/segwit/: mod.rs  refund.rs  settlement.rs  setup.rs  wallet.rs
