[package]
name = "spill"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.33.0-beta" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
corepc-node = { version = "0.10.1", features = ["29_0"] }
bitcoin = { version = "0.33.0-beta", features = ["rand"] }
